@@ -60,7 +60,8 @@
   *  - CDC based demos and project now work under 64 bit versions of Windows (thanks to Ronny Hanson, Thomas Bleeker)
   *  - Re-add in flip, flip-ee, dfu and dfu-ee targets to project makefiles (thanks to Opendous Inc.)
   *  - Fix allowable F_CPU values comment in project makefiles
-  *  - Fixed DFU and CDC class bootloaders on the AT90USBXXX2 series USB AVRs
+  *  - Fixed DFU and CDC class bootloaders on the series 2 USB AVRs, corrected invalid signatures, added support for the new
+  *    ATMEGAxxx2 series 2 variant AVRs to the DFU bootloader
   *
   *
   *  \section Sec_ChangeLog090810 Version 090810
